--- a/readme.Rmd
+++ b/readme.Rmd
@@ -19,7 +19,7 @@ library(ggplot2)
 ```{r tables, results='markup'}
 #kable(Edwards_nutrient_traits[1:10,])
 
-#kable(Edwards_nutrient_traits_meta)
+kable(Edwards_nutrient_traits_meta, format = "markdown")
 ```
 
 ```{r}
