--- a/readme.Rmd
+++ b/readme.Rmd
@@ -36,6 +36,7 @@ devtools::install_github("andrewdolman/phytotraitr")
 ```{r, echo=FALSE, message=FALSE}
 library(knitr)
 library(dplyr)
+library(tidyr)
 library(ggplot2)
 library(phytotraitr)
 ```
@@ -47,40 +48,24 @@ kable(Edwards_nutrient_traits[1:10,1:6], format = "markdown")
 kable(Edwards_nutrient_traits_key[1:6,], format = "markdown")
 ```
 
-### Minimum P cell quotas for freshwater taxa
+### Minimum and maximum P cell quotas for freshwater taxa
 
-```{r min_P_C}
+```{r min_max_P_C}
 p <- Edwards_nutrient_traits %>% 
-  filter(system == "freshwater",
-         complete.cases(qmin_p_c)) %>%
-  ggplot(aes(x = taxon, y = qmin_p_c)) %>% 
+  filter(system == "freshwater") %>%
+  select(taxon, qmin_p_c, qmax_p_c) %>% 
+  gather(Trait, Value, -taxon) %>% 
+  filter(complete.cases(Value)) %>% 
+  ggplot(aes(x = taxon, y = Value, colour = Trait)) %>% 
   + geom_point(position = position_jitter(width = 0.05)) %>% 
   + coord_flip() %>% 
-  + scale_x_discrete(with(Edwards_nutrient_traits_key, Edwards_nutrient_traits_key[`Column name`=="taxon","Variable definition"])) %>% 
-  + scale_y_continuous(paste0(Edwards_nutrient_traits_key[Edwards_nutrient_traits_key$`Column name`=="qmin_p_c","Variable definition"],
-                              " [",
-                              Edwards_nutrient_traits_key[Edwards_nutrient_traits_key$`Column name`=="qmin_p_c","Units"],
-                              "]"))
+  + scale_x_discrete(with(Edwards_nutrient_traits_key,
+                          Edwards_nutrient_traits_key[`Column name`=="taxon","Variable definition"])) %>% 
+  + scale_y_continuous(paste0("[",
+                              with(Edwards_nutrient_traits_key,
+                                   Edwards_nutrient_traits_key[`Column name`=="qmin_p_c","Units"],
+                              "]")))
 p
-```
-
-
-### Maximum P cell quotas for freshwater taxa
-
-```{r max_P_C}
-p <- Edwards_nutrient_traits %>% 
-  filter(system == "freshwater",
-         complete.cases(qmax_p_c)) %>%
-  ggplot(aes(x = taxon, y = qmax_p_c)) %>% 
-  + geom_point(position = position_jitter(width = 0.05)) %>% 
-  + coord_flip() %>% 
-  + scale_x_discrete(with(Edwards_nutrient_traits_key, Edwards_nutrient_traits_key[`Column name`=="taxon","Variable definition"])) %>% 
-  + scale_y_continuous(paste0(Edwards_nutrient_traits_key[Edwards_nutrient_traits_key$`Column name`=="qmax_p_c","Variable definition"],
-                              " [",
-                              Edwards_nutrient_traits_key[Edwards_nutrient_traits_key$`Column name`=="qmax_p_c","Units"],
-                              "]"))
-p
-
 ```
 
 
